make callback utls,templates  for robokass (url to nexchange.ru), set payment.is_success when do "paid"

--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -221,7 +221,7 @@
 		            	{% else %}
 		                <td><img src="/static/icons/close_16.png"></td>
 		            	{% endif %}
-		            	{% if order.is_complete == 1 %}
+		            	{% if order.is_completed == 1 %}
 		            	<td><img src="/static/icons/check_16.png"></td>
 		            	{% else %}
 		                <td><img src="/static/icons/close_16.png"></td>
