--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -166,7 +166,27 @@
     margin-top: 30px;
     margin-right: 10px;
     border-color: transparent;
+}
 
+.payfailed{
+    text-align: center;
+    padding-top: 50px;
+    margin-bottom: 300px;
+    font-size: 16px;
+}
+
+.try-again{
+    width: 200px;
+    max-width: 100%;
+    height: 50px;
+    font-size: 30px;
+    padding: 5px 0px;
+    background-color: #8BC53F;
+    border-radius: 8px !important;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    margin-right: 15px;
+    color: #FFFFFF !important;
 }
 
 .place-cancel{
