fix "referrences should be visible only on main page", Supported payments footer dis formatted on mobile

--- a/static/css/overrides_old.css
+++ b/static/css/overrides_old.css
@@ -152,7 +152,7 @@
         padding: 0;
     }
 
-    html body .supported-payments {
+    html body  {
         min-height: 200px;
         padding: 0;
     }
