--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -29,7 +29,7 @@
     </script>
     <meta charset="utf-8">
     <title>{% trans 'Nexchange' %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="">
     <meta name="author" content="">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -71,33 +71,27 @@
         <div class="menuContainer">
             {% include 'core/partials/menu.html' %}
         </div>
-            {% block main %}
-            {% endblock %}
-
-    <div class="cms_container" >
-        {% block cms_static %}
+        {% block main %}
         {% endblock %}
+
+        <div class="cms_container" >
+            {% block cms_static %}
+            {% endblock %}
+        </div>
+        {# {% render_model_block request.current_page "changelist" %}{% endrender_model_block %} #}
+
+        <div class="cms_container">
+           {% block content %}
+           {% endblock content %}
+        </div>
     </div>
+    <div class="spacer"></div>
 
-
-
-{#    {% render_model_block request.current_page "changelist" %}{% endrender_model_block %}#}
-    </div>
-    {% block content %}
-    {% endblock content %}
-
-    <div class="cms_container container">
-
-    </div>
-
-   {% block footer %}
-{#       {% include 'core/partials/supported_payments.html' %}#}
-   {% endblock %}
-
+    {% block footer %}
+    {#{% include 'core/partials/supported_payments.html' %}#}
+    {% endblock %}
     {% include 'core/partials/popular_faq.html' %}
     {% include 'core/partials/seo_footer.html' %}
-    {% include 'core/partials/footer.html' %}
-
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"
           integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="
