--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -90,7 +90,7 @@
         </div>
     </div>
     {% if type == 'buy' %}
-      <div class="col col-xs-12  col-md-6 payment-type-trigger robokassa" data-type="Robokassa">
+      <div class="col col-xs-12  col-md-6 payment-type-trigger robokassa hidden" data-type="Robokassa">
         <div class="col col-xs-12">
             <img src="{% static 'icons/robokassa.png' %}"
                  alt="{% trans 'Robokassa'%}"
