--- a/templates/core/partials/steps/step_amount.html
+++ b/templates/core/partials/steps/step_amount.html
@@ -20,15 +20,15 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-5 price_box price_box_ticker">
-                <span class="rate-buy"></span><br>
+                <span class="rate rate-buy"></span><br>
                 <span class="currency"></span><br>
                 <a href="#" class="trigger trigger-buy">{% trans "Buy" %}</a>
             </div>
             <div class="col-xs-2"></div>
             <div class="col-xs-5 price_box price_box_ticker">
-                <span class="rate-sell"></span><br>
+                <span class="rate rate-sell"></span><br>
                 <span class="currency"></span><br>
-                <a href="#" class="price_box2_a trigger trigger-sell">{% trans "Sell" %}</a></div>
+                <a href="#" class="price_box2_a trigger trigger trigger-sell">{% trans "Sell" %}</a></div>
         </div>
         <div class="row">
             <div class="col-xs-5 price_box" id="pricebox_rub">
