--- a/templates/core/partials/seo_footer.html
+++ b/templates/core/partials/seo_footer.html
@@ -17,20 +17,20 @@
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'ABOUT' %} </h4>
-            <a href="/about">{% trans 'About Us' %}</a>
-            <a href="/careers">{% trans 'Careers' %}</a>
-            <a href="/press">{% trans 'Press' %}</a>
-            <a href="/conference">{% trans 'Conference' %}</a>
-            <a href="/legal_Privacy">{% trans 'Legal' %} &amp; {% trans 'Privacy' %}</a>
-            <a href="/security">{% trans  'Security' %}</a>
+            <a href="/cmspage?type=about_us">{% trans 'About Us' %}</a>
+            <a href="/cmspage?type=careers">{% trans 'Careers' %}</a>
+            <a href="/cmspage?type=press">{% trans 'Press' %}</a>
+            <a href="/cmspage?type=conference">{% trans 'Conference' %}</a>
+            <a href="/cmspage?type=legal_privacy">{% trans 'Legal & Privacy' %}</a>
+            <a href="/cmspage?type=security">{% trans  'Security' %}</a>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
         	<h4>{% trans 'RESOURCES' %} </h4>
-            <a href="/faq">{% trans 'FAQ' %}</a>
-            <a href="/blog">{% trans 'Blog' %}</a>
-            <a href="/fees">{% trans 'Fees' %}</a>
-            <a href="/support">{% trans 'Support' %}</a>
-            <a href="/trading_guide">{% trans 'Trading Guide' %}</a>
+            <a href="/cmspage?type=faq">{% trans 'FAQ' %}</a>
+            <a href="/cmspage?type=blog">{% trans 'Blog' %}</a>
+            <a href="/cmspage?type=fees">{% trans 'Fees' %}</a>
+            <a href="/cmspage?type=support">{% trans 'Support' %}</a>
+            <a href="/cmspage?type=trading_guide">{% trans 'Trading Guide' %}</a>
         </div>
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
    	  <h4>{% trans 'Social' %}</h4>
