--- a/templates/cms/cms_default.html
+++ b/templates/cms/cms_default.html
@@ -14,87 +14,30 @@
 
 {% block cms_static %}
     <div class="collapse navbar-collapse menupanel">
-            <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav">
+            {% for c in cmsmenu %}
                 <li class="active">
-                    <a href="/about">
-                        {% trans "About us" %}
+                    <a href="/cmspage?type={{ c.0 }}">
+                        {{ c.1 }}
                     </a>
                 </li>
+            {% endfor %}
+        </ul>
+    </div>
 
-                <li class="active">
-                    <a href="/careers">
-                        {% trans "Careers" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/press">
-                        {% trans "Press" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/conference">
-                        {% trans "Conference" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/legal_Privacy">
-                        {% trans "Legal & Privacy" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/security">
-                        {% trans "Security" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/faq">
-                        {% trans "FAQ" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/blog">
-                        {% trans "Blog" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/fees">
-                        {% trans "Fees" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/support">
-                        {% trans "Support" %}
-                    </a>
-                </li>
-
-                <li class="active">
-                    <a href="/trading_guide">
-                        {% trans "Trading Guide" %}
-                    </a>
-                </li>
-
-
-
-            </ul>
+    <div class="cms_text">
+        <div class="cms_header">
+            {{ head | safe }}
+        </div>
+        <div class="line-order" >
+            -----------------------------------------
+        </div>
+       <div class="cms_written">
+            {{ written_by| safe }}
         </div>
 
-    <div class="cms_header">
-            {% placeholder "Headeer" %}
-    </div>
-
-   <div class="cms_written">
-        {% placeholder "written_by" %}
-    </div>
-
-    <div class="cms_body">
-        {% placeholder "Body" %}
+        <div class="cms_body">
+            {{ body | safe }}
+        </div>
     </div>
 {% endblock %}
