--- a/templates/registration/registration_base.html
+++ b/templates/registration/registration_base.html
@@ -2,14 +2,14 @@
 {% load i18n %}
 {% load bootstrap3 %}
 
-{% block title %}{% translate "Password Reset"%}{% endblock %}
+{% block title %}{% trans "Password Reset"%}{% endblock %}
 
 
 {% block main %}	
 
 <div class="page-header">
   <h1>
-    {% translate "BTC - Exchange" %}
+    {% trans "BTC - Exchange" %}
       <small>{% translate "Password reset" %}</small>
   </h1>
 </div>
