#2 HOURS implemented after some work google recaptcha

--- a/templates/core/partials/steps/step_authentication.html
+++ b/templates/core/partials/steps/step_authentication.html
@@ -9,7 +9,10 @@
             <div class="step1">
                 {% trans "Enter your phone" as enter_your_phone %}
                 {% include 'core/partials/forms/phone.html' with label=enter_your_phone%}
+                <center><div id="grecaptcha"></div></center>
+
             </div>
+            </script>
             <div class="step2 hidden">
                 <div class="col col-lg-12 register">
                     <label for="verification_code">
@@ -20,7 +23,7 @@
             </div>
         </div>
         <div class="col col-lg-12 center controls">
-            <span class="btn btn-primary create-acc">
+            <span class="btn btn-primary create-acc hidden">
                 {% trans "Send SMS"%}
             </span>
             <span class="btn btn-danger create-acc resend hidden">
@@ -32,6 +35,7 @@
             </span>
         </div>
     </div>
+
 {% endblock %}
 {% block spa_navigation %}
 {% endblock %}
