--- a/templates/core/order.html
+++ b/templates/core/order.html
@@ -20,12 +20,35 @@
     {% include 'core/partials/press.html' %}
 {% endblock %}
 {% block extra_js_footer %}
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" 
+      async defer></script>
+
+    
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="{% static 'bower_components/card/dist/jquery.card.js' %}"></script>
     <script src="{% static 'bower_components/intl-tel-input/build/js/intlTelInput.min.js' %}"></script>
+
     <script src="{% static 'dist/js/bundle.js' %}"></script>
+     
+
+     <script>
+        var verifyRecatpchaCallback = function(response) {
+
+                //console.log( 'g-recaptcha-response: ' + response );
+                  $('.create-acc').removeClass('hidden');
+
+        };
+
+        var onloadCallback = function() {
+                grecaptcha.render( 'grecaptcha', {
+                  'sitekey' : '6LfPaAoUAAAAAOmpl6ZwPIk2Zs-30TErK48dPhcS',  // required
+                  'theme' : 'light',  // optional
+                  'callback': verifyRecatpchaCallback  // optional
+                });
+        };
+     </script>
 {% endblock %}
 
 
