--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -114,6 +114,7 @@
     <script src="{% static 'js/footer.js' %}"></script>
     {% bootstrap_javascript %}
     {% block extra_js_footer %} {% endblock %}
+    <script src="https://js.braintreegateway.com/js/braintree-2.27.0.min.js"></script>
 
 </body>
 </html>
