--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -65,7 +65,7 @@
     <meta name="interkassa-verification" content="66cc636a788e738725aa9ec76741045b" />
 </head>
 <body>
-    <div class="container">
+    <div class="container main">
         <div class="menuContainer">
             {% include 'core/partials/menu.html' %}
         </div>
