--- a/templates/core/partials/forms/phone.html
+++ b/templates/core/partials/forms/phone.html
@@ -2,9 +2,9 @@
 <form action="/">
     <div class="row">
         <div class="col col-lg-12">
-            <label for="phone">{% trans label %} </label>
+            <label for="phone">{% trans label %} </label> <br>
                 <input type="text" name="phone" class="phone val"
                        value="{% if user.is_authenticated  %}{{ user.profile.phone }}{% else %}+7{% endif %}">
-        </div>
+        </div>        
     </div>
 </form>
