--- a/static/css/overrides.css
+++ b/static/css/overrides.css
@@ -20,12 +20,12 @@
     padding-bottom: 50px;
 }
 
-.step_panel .step_panel_box .btn-info,
-.step_panel .step_panel_box .btn-success,
-.step_panel .step_panel_box a {
-    background: none;
-    color: #8dc73f;
-}
+/*.step_panel .step_panel_box .btn-info,*/
+/*.step_panel .step_panel_box .btn-success,*/
+/*.step_panel .step_panel_box a {*/
+    /*background: #FFFFFF;*/
+    /*color: #8EC251;*/
+/*}*/
 
 @font-face {
 	font-family: 'Montserrat-Regular';
@@ -242,12 +242,9 @@
 }
 
 .new-order{
-    background: #8cc63f;
     width: 100px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -khtml-border-radius:10px;
-    border-radius: 10px;
+    height: 35px;
+    border-radius: 0;
     padding-left: 2px;
 }
 
@@ -480,10 +477,25 @@ a:focus
 
 .step_panel{width:100%; max-width:644px; display:inline-block; background-image:url(../images/step_bg.png); background-size:100% auto; background-repeat:no-repeat; background-position:center 10%; margin:50px 0; }
 
-.step_panel_box{display:inline-block; width:32%; vertical-align:top; font-size:13px; color:#000; font-weight: bold; font-family: 'Montserrat-Light', 'Gotham'; }
+.step_panel_box{
+    padding-top: 5px;
+    display:inline-block;
+    width:32%;
+    vertical-align:top;
+    font-size:13px;
+    color:#000;
+    font-weight: bold;
+    font-family: 'Montserrat-Light', 'Gotham';
+}
 
-.step_panel_box p{width:100%; float:left; margin:10px 0; background-color:#FFF; font-weight: bold;}
-
+.step_panel_box p{
+    width:100%;
+    float:left;
+    margin:10px 0;
+    background-color:#FFF;
+    font-weight: bold;
+    color: #8FC351;
+}
 
 .chart_panel_large_image{position:relative; z-index:1; margin:-25px 0 0 0; width:100%;}
 
@@ -644,10 +656,7 @@ body .price_box_ticker .trigger-sell, body .price_box_next_cont .sell-go{
 @media screen and (max-width:600px) { }
 
 @media screen and (max-width:550px) {
- .step-icon
- {
-    height: 55px;
- }
+
     #container-graph{
         padding-top: 20px;
         width: 90%;
@@ -785,4 +794,10 @@ span.btn {
 #grecaptcha {
     display: inline-block;
     vertical-align: middle;
+}
+
+#id_date {
+    float: right;
+    max-width: 150px;
+    text-align: center;
 }
