--- a/static/css/overrides_old.css
+++ b/static/css/overrides_old.css
@@ -104,10 +104,6 @@ html body .ui-state-default{
 .process-row{
   display:table-row
 }
-.process-step button[disabled]{
-  opacity:1 !important;
-  filter: alpha(opacity=100) !important
-}
 
 .process-step{
   display:table-cell;
@@ -118,12 +114,38 @@ html body .ui-state-default{
   margin-top:4px
 }
 .process-step .btn-circle{
-  width:80px;
-  height:80px;
+  width:73px;
+  height:72px;
   text-align:center;
-  font-size:12px;
-  border-radius:50%}
-
+  font-size: 32px;
+  border-radius:50%;
+  padding: 0;
+  border: 3px #8FC351 solid;
+}
+.step-icon-container {
+    border-radius: 50%;
+    padding: 15px;
+    vertical-align: middle;
+    width: 61px;
+    height: 62px;
+    display: block;
+    margin: 1px 3px;
+    text-align:center;
+    float:left;
+    background: #FFFFFF;
+    /* Old browsers */
+    background: linear-gradient(to left, #FFFFFF 50%, #8FC351 50%);
+    background-size: 200% 100%;
+    background-position:right bottom;
+    transition:all 2s ease;
+}
+.completed .step-icon-container {
+    background-position:left bottom;
+}
+.step-icon {
+    vertical-align: middle;
+    padding: 0;
+}
 .disableClick{
     pointer-events: none;
 }
