--- a/templates/core/index_order.html
+++ b/templates/core/index_order.html
@@ -18,15 +18,12 @@
 			</div>
 
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-6">
+				<div class="col-xs-3">
                     <a href="{% url 'core.order_add' %}">
                         <button type="button" class="btn-success new-order" > {% trans "New" %}</button>
                     </a>
 				</div>
-
-				<div class="visible-xs"> &nbsp;</div>
-				
-				<div class="col-xs-12 col-sm-6 col-md-6" >
+				<div class="col-xs-9" >
 					<form method="post" class="form form-search">
 						<button type="submit" class="btn btn-default search-order pull-right" ><i class="fa fa-search"></i>&nbsp;</button>
                         {% bootstrap_field form.date show_label=False form_group_class="form-group col-xs-10 nopadding pull-right" %}
@@ -41,15 +38,15 @@
 			<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
 
-            <div  class="panel panel-default  visible-sm visible-xs">
+            <div  class="panel panel-default visible-sm visible-xs">
               {% for order in orders %}
-                  <div id="{{ order.unique_reference}}" class="headers-mobile panel-heading">{{ order.created_on |date:"D d M Y"}}
-                        <a class="pull-right" data-toggle="collapse" data-parent="{{ order.unique_reference}}" href="#body-{{ order.unique_reference}}">
-                            {% trans "details" %}
-                        </a>
-                  </div>
-
-                  <div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collaps collapse">
+                      <div id="{{ order.unique_reference}}" class="headers-mobile panel-heading">
+                          {{ order.type }} {{ order.amount_coin }} BTC {{ order.created_on |date:"D d M Y"}}
+                            <a class="pull-right" data-toggle="collapse" data-parent="{{ order.unique_reference}}" href="#body-{{ order.unique_reference}}">
+                                {% trans "details" %}
+                            </a>
+                      </div>
+                  <div id="body-{{ order.unique_reference}}" class="panel-body panel-collapse collapse">
 
                   <div>
                       <div class = "headers-mobile header-text">{% trans "Reference" %}</div>
@@ -102,9 +99,9 @@
                   <div class = "headers-mobile">
                     {% trans "Released" %}
                     {% if order.is_released == 1 %}
-                        <img src="/static/icons/check_16.png" \>
+                        <span class="fa fa-check fa-1"></span>
                     {% else %}
-                        <img src="/static/icons/close_16.png" \>
+                        <span class="fa fa-close fa-1"></span>
                     {% endif %}
                   </div>
 
@@ -112,9 +109,9 @@
                   <div class = "headers-mobile">
                     {% trans "Completed" %}
                     {% if order.is_complete == 1 %}
-                        <img src="/static/icons/check_16.png" \>
+                        <img src="/static/icons/check_16.png">
                     {% else %}
-                        <img src="/static/icons/close_16.png" \>
+                        <img src="/static/icons/close_16.png">
                     {% endif %}
                   </div>
 
@@ -124,12 +121,17 @@
                   </div>
 
                     <div class = "header-text" id="td-frozen-withdraw-{{order.pk}}"
-                        {% if not order.frozen %}
+                        {% if not order.withdraw_address_frozen %}
                             style="display:none"
                         {% endif %}>
 
                         <span class="frozen">
-                            {{order.withdraw_address | default_if_none:"Not Defined"}}
+                            {% if order.withdraw_address %}
+                                {{order.withdraw_address }}
+                            {% else %}
+                                {% trans "Not Defined" %}
+                            {% endif %}
+
                         </span>
                     </div>
 
@@ -157,6 +159,7 @@
 
 
                   </div>
+
               {% endfor %}
             </div>
 
