--- a/templates/core/partials/payment_options.html
+++ b/templates/core/partials/payment_options.html
@@ -4,22 +4,24 @@
     <div class="payment_title">
         {% trans 'Bank'%}
     </div>
-    {% if type == 'buy' %}              <!-- TO-DO get this from database ??-->
-        <div class="col col-xs-12 col-md-6 payment-type-trigger"
-             data-type="Alfa Bank"
-            data-identifier="{{ cards.alfa.identifier }}">
-        <div class="col col-xs-12">
-            <img src="{% static 'icons/alfa.png' %}"
-                 alt="{% trans 'Alfa-bank'%}"
-                 class="payment-method-icon btn btn-primary">
-        </div>
-        <div class="col col-xs-12  ">
-            <div class="payment-label">
-                {% trans 'Pay with' %} {%trans 'Alfa-bank'%}
-                <a href="#" class="round-button"> ></a>
+    {% if type == 'buy' %}
+        {% currency == cards.alfa.currency.code %}
+            <div class="col col-xs-12 col-md-6 payment-type-trigger"
+                 data-type="Alfa Bank"
+                data-identifier="{{ cards.alfa.identifier }}">
+                <div class="col col-xs-12">
+                    <img src="{% static 'icons/small/alfabank.png' %}"
+                         alt="{% trans 'Alfa-bank'%}"
+                         class="payment-method-icon">
+                </div>
+                <div class="col col-xs-12  ">
+                    <div class="payment-label">
+                        {% trans 'Pay with' %} {%trans 'Alfa-bank'%}
+                        <a href="#" class="round-button"> ></a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>                              <!-- TO-DO get this from database ??-->
+        {% endif %}
     <div class="col col-xs-12 col-md-6 payment-type-trigger"
          data-type="Sberbank"
          data-identifier="{{ cards.sber.identifier }}">
@@ -36,7 +38,7 @@
         </div>
 
     </div>
-    {% else %}                          <!-- TO-DO get this from database ??-->
+    {% else %}                          
     <div class="col col-xs-12 col-sm-6 payment-type-trigger bank" data-type="c2c">
         <div class="col col-xs-12">
             <i class="fa fa-credit-card-alt fa-5 payment-method-icon btn btn-primary">
@@ -48,7 +50,7 @@
                 <a href="#" class="round-button"> ></a>
             </div>
         </div>
-    </div>                              <!-- TO-DO get this from database ??-->
+    </div>                              
     <div class="col col-xs-12 col-sm-6 payment-type-trigger" data-type="cash">
         <div class="col col-xs-12">
             <i class="fa fa-money fa-5 payment-method-icon btn btn-primary">
@@ -62,7 +64,7 @@
             </div>
         </div>
     </div>
-    {% endif %}                         <!-- TO-DO get this from database ??-->
+    {% endif %}                         
 
 </div>
 <div class="row {{ type }} row_type">
